--- a/demo/demo.html
+++ b/demo/demo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 	<head>
 		<title>jquery-qconsole demo</title>
 		<link rel="stylesheet" type="text/css" href="../css/style.css"></style>
