--- a/demo/demo.html
+++ b/demo/demo.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html>
 	<head>
+		<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 		<title>jquery-qconsole demo</title>
 		<link rel="stylesheet" type="text/css" href="../css/style.css"></style>
 		<style>
