updated css path in demo.html

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 		<title>jquery-qconsole demo</title>
-		<link rel="stylesheet" type="text/css" href="../css/style.css"></style>
+		<link rel="stylesheet" type="text/css" href="../css/qconsole.css"></style>
 		<style>
 			* {
 				margin: 0px;
