--- a/node-demo/public/demo.html
+++ b/node-demo/public/demo.html
@@ -15,7 +15,7 @@
 			}
 		</style>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-		<script src="../js/jquery-qconsole-min.js"></script>
+		<script src="../js/jquery-qconsole.js"></script>
 		<script>
 			$(function() {
 				$.qconsole({ serviceUrl: 'http://localhost:3000/description' });
